--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sia-js",
+  "name": "@deweb/sia-js",
   "version": "1.0.0",
   "main": "lib/index.js",
   "repository": "https://github.com/escada-finance/sia-js",
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bignumber.js": "^9.0.0",
+    "buffer": "^6.0.3",
     "blake2b": "^2.1.3",
     "tweetnacl": "^1.0.3"
   },
@@ -22,6 +23,6 @@
     ]
   },
   "browser": {
-		"crypto": false
-	}
+    "crypto": false
+  }
 }
